[package]
name = "deepseek-api"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
wasmtime = "14.0.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
anyhow = "1.0"
futures-util = { version = "0.3", features = ["async-await"] }
bytes = "1.5"
async-stream = "0.3"