[package]
name = "deepseek-api"
version = "0.1.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
wasmtime = "41.0.3"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"
futures-util = { version = "0.3", features = ["async-await"] }
bytes = "1.11"
async-stream = "0.3"
